--- a/Views/HelloWorld/Index.cshtml
+++ b/Views/HelloWorld/Index.cshtml
@@ -3,10 +3,16 @@
 *@
 
 
-@{ ViewData["Title"] = "Index"; 
-    
-    }
+@{  
+    ViewData["Title"] = "Movie List";
+    <title>@ViewData["Title"] - Movie App</title>
 
-<h2>Index</h2>
+
+}
+
+
+
+
+<h2>My Movie List</h2>
 
 <p>Hello from our View Template!</p>
